--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -363,6 +363,49 @@ html, body {
   font-family: 'Lato';
 }
 
+.abstract-box {
+  margin-top: 22px;
+  margin-bottom: 20px;
+  width: 93%;
+  padding: 0px 20px 0px 20px;
+  background-color: #fff;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  animation: fadeIn 0.3s ease-in-out forwards;
+  border: 2px solid #666;
+}
+
+.abstract-box p {
+  color: #4a4a4a;
+  font-style: italic;
+  font-size: 17px;
+  line-height: 1.5;
+}
+
+.abstract-box .abstract-title {
+  background-color: #fff;
+  font-size: 1.2em;
+  font-weight: 800;
+  color: #666;
+  padding: 0 10px;
+  line-height: 1;
+  position: absolute;
+  top: -12px;
+  left: 20px;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 /* ===== components ===== */
 .horizontal-line {
   background-color: var(--horizontal-line);
@@ -460,6 +503,33 @@ html, body {
     margin-right: 0;
     margin-top: 5px;
     margin-bottom: 18px;
+  }
+
+  .abstract-box {
+    margin-left: -24px;
+    width: 97%;
+    padding: 0px 15px 0px 15px;
+    background-color: #fff;
+    border: 2px solid #666;
+  }
+
+  .abstract-box p {
+    color: #4a4a4a;
+    font-style: italic;
+    font-size: 15px;
+    line-height: 1.4;
+  }
+
+  .abstract-box .abstract-title {
+    background-color: #fff;
+    font-size: 1.1em;
+    font-weight: 800;
+    color: #666;
+    padding: 0 10px;
+    line-height: 1;
+    position: absolute;
+    top: -9px;
+    left: 20px;
   }
 }
 
