--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -27,7 +27,10 @@
     display: none;
   }
   .headerOptionsSmall {
-    display: block;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 8px;
   }
 }
 
@@ -49,7 +52,7 @@
 }
 
 .LanguageSwitcherSmall {
-  margin-right: 10px;
+  margin-right: 0px;
 }
 
 .ThemeSwitcherLarge {
@@ -58,7 +61,21 @@
 }
 
 .ThemeSwitcherSmall {
-  margin-right: 7px;
+  margin-right: 0px;
+}
+
+.SearchBoxLarge {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1px;
+  margin-left: 40px;
+  margin-right: -28px;
+}
+
+.SearchBoxSmall {
+  margin-top: 7px;
+  margin-right: -5px;
 }
 
 .button {
@@ -187,4 +204,18 @@
 
 .selectUnderline:after {
   border-bottom: 2px solid red;
+}
+
+.searchIconButton {
+  margin-left: 35px;
+}
+
+.searchInput {
+  margin-left: 8px;
+  width: 180px;
+  transition: width 0.3s;
+  background: #fff;
+  border-radius: 4px;
+  padding: 2px 8px;
+  font-size: 1rem;
 }
